--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "orchestra/testbench": "^4.0"
     }
 }
